dataset path changes

--- a/config/data/data.yaml
+++ b/config/data/data.yaml
@@ -1,3 +1,4 @@
 fatura: mathieu1256/FATURA2-invoices
 rvl_cdip_subset: jinhybr/rvl_cdip_400_train_val_test
-invoiceXpert: data/invoiceXpert/data #wiF0n/InvoiceXpert
+invoiceXpert_local: data/invoiceXpert
+invoiceXpert: wiF0n/InvoiceXpert
