--- a/config/data/data.yaml
+++ b/config/data/data.yaml
@@ -1,4 +1,9 @@
 fatura: mathieu1256/FATURA2-invoices
 rvl_cdip_subset: jinhybr/rvl_cdip_400_train_val_test
-invoiceXpert_local: data/invoiceXpert
-invoiceXpert: wiF0n/InvoiceXpert
+invoiceXpert:
+  hf_path: wiF0n/InvoiceXpert
+  local_path: data/invoiceXpert
+  num_labels: 2
+  label_col: label
+  image_col: image
+  label_names: ['invoice', 'not-invoice']
