--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ accelerate==0.27.2
 aiohttp==3.9.3
 aiosignal==1.3.1
 alembic==1.13.1
+altair==5.2.0
 antlr4-python3-runtime==4.9.3
 anyio==4.3.0
 argon2-cffi==23.1.0
@@ -15,6 +16,7 @@ Babel==2.14.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
 blinker==1.7.0
+cachetools==5.3.2
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -30,6 +32,7 @@ defusedxml==0.7.1
 dill==0.3.8
 docker==7.0.0
 entrypoints==0.4
+evaluate==0.4.1
 exceptiongroup==1.2.0
 executing==2.0.1
 fastcore==1.5.29
@@ -42,6 +45,7 @@ frozenlist==1.4.1
 fsspec==2023.10.0
 gitdb==4.0.11
 GitPython==3.1.42
+google-auth==2.28.1
 greenlet==3.0.3
 gunicorn==21.2.0
 h11==0.14.0
@@ -80,9 +84,11 @@ lovely-numpy==0.2.11
 lovely-tensors==0.1.15
 Mako==1.3.2
 Markdown==3.5.2
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.3
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 mistune==3.0.2
 mlflow==2.10.2
 mpmath==1.3.0
@@ -114,6 +120,7 @@ packaging==23.2
 pandas==2.2.0
 pandocfilters==1.5.1
 parso==0.8.3
+peft==0.8.2
 pexpect==4.9.0
 pillow==10.2.0
 platformdirs==4.2.0
@@ -125,9 +132,13 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==15.0.0
 pyarrow-hotfix==0.6
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
 pycparser==2.21
+pydeck==0.8.1b0
 Pygments==2.17.2
 pyparsing==3.1.1
+pytesseract==0.3.10
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-json-logger==2.0.7
@@ -140,9 +151,12 @@ querystring-parser==1.2.4
 referencing==0.33.0
 regex==2023.12.25
 requests==2.31.0
+responses==0.18.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.7.0
 rpds-py==0.18.0
+rsa==4.9
 safetensors==0.4.2
 scikit-learn==1.4.1.post1
 scipy==1.12.0
@@ -154,12 +168,16 @@ soupsieve==2.5
 SQLAlchemy==2.0.27
 sqlparse==0.4.4
 stack-data==0.6.3
+streamlit==1.31.1
 sympy==1.12
+tenacity==8.2.3
 terminado==0.18.0
 threadpoolctl==3.3.0
 tinycss2==1.2.1
 tokenizers==0.15.2
+toml==0.10.2
 tomli==2.0.1
+toolz==0.12.1
 torch==2.2.1
 tornado==6.4
 tqdm==4.66.2
@@ -169,8 +187,11 @@ triton==2.2.0
 types-python-dateutil==2.8.19.20240106
 typing_extensions==4.9.0
 tzdata==2024.1
+tzlocal==5.2
 uri-template==1.3.0
 urllib3==2.2.1
+validators==0.22.0
+watchdog==4.0.0
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
